--- a/scss/layouts/_quality.scss
+++ b/scss/layouts/_quality.scss
@@ -230,17 +230,17 @@
             background: $orange-100;
           }
           h1 {
-            margin-top: 28px;
-            font-size: 4rem;
-            margin-bottom: 29px;
+            margin-top: 18px;
+            font-size: 3.2rem;
+            margin-bottom: 18px;
           }
           p {
             padding-right: 30px;
-            font-size: 1.4rem;
+            font-size: 1.2rem;
             line-height: 154.167%;
           }
           &:nth-child(2) {
-            padding: 73px 40px;
+            padding: 33px 20px;
             .quantity-item_img {
               padding: 23px;
               border-radius: 12px;
@@ -354,7 +354,7 @@
 @media screen and (max-width: 575.98px) {
   .quality {
     .quality-inner {
-      margin: 0 40px;
+      margin: 0 calc((100vh - 430px) / 2);
       h2 {
         margin-top: 80px;
       }
@@ -409,12 +409,12 @@
   }
 }
 
-@media screen and (max-width: 430.98px) {
+@media screen and (max-width: 460.98px) {
   .quality {
     .quality-inner {
-      margin: 0 40px;
+      margin: 0 calc((100vw - 320px) / 2);
       h2 {
-        margin-top: 80px;
+        margin-top: 40px;
       }
       .quantity-list {
         display: flex;
