--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,10 @@
 @import './layouts/hero';
 @import './layouts/quality';
 @import './layouts/product';
+@import './layouts/new';
+@import './layouts/protect';
+@import './layouts/service';
+@import './layouts/calltoaction';
 
 // Import Components
 @import './components/button';
