--- a/scss/layouts/_quality.scss
+++ b/scss/layouts/_quality.scss
@@ -354,11 +354,14 @@
 @media screen and (max-width: 575.98px) {
   .quality {
     .quality-inner {
-      margin: 0 calc((100vh - 430px) / 2);
+      margin: 0 calc((100vw - 430px) / 2);
       h2 {
-        margin-top: 80px;
+        margin-top: 40px;
       }
       .quantity-list {
+        display: flex;
+        flex-direction: column;
+        row-gap: 10px;
         &::after {
           content: "";
           border-radius: 282px;
@@ -395,7 +398,8 @@
             margin: 10px 0;
           }
           &:nth-child(2) {
-            padding: 23px 20px;
+            padding: 20px 20px;
+            order: 1;
             .quantity-item_img {
               padding: 23px;
               border-radius: 12px;
